# body_scanner

./: CMakeLists.txt  body_scanner.cpp
cloud_utils/: cloud_utils.cpp  cloud_utils.h
modules/: FindFreenect2.cmake  Freenect2Config.cmake
